tests/rosetta/out/Fortran/append-a-record-to-the-end-of-a-text-file.f90
! Generated by Mochi compiler v0.10.26 on 2025-07-16T09:28:39Z
program append_a_record_to_the_end_of_a_text_file
  implicit none
    integer, allocatable, dimension(:) :: app0
  main()
  contains
  recursive integer function writeTwo() result(res)
    res = (/'jsmith:x:1001:1000:Joe Smith,Room 1007,(234)555-8917,(234)555-0077,jsmith@rosettacode.org:/home/jsmith:/bin/bash','jdoe:x:1002:1000:Jane Doe,Room 1004,(234)555-8914,(234)555-0044,jdoe@rosettacode.org:/home/jsmith:/bin/bash'/)
    return
  end function writeTwo
  recursive integer function appendOneMore(lines) result(res)
    integer, intent(in) :: lines
    allocate(app0(size(lines)+1))
    app0(1:size(lines)) = lines
    app0(size(lines)+1) = 'xyz:x:1003:1000:X Yz,Room 1003,(234)555-8913,(234)555-0033,xyz@rosettacode.org:/home/xyz:/bin/bash'
    res = app0
    return
  end function appendOneMore
  recursive integer function main() result(res)
    lines = writeTwo()
    lines = appendOneMore(lines)
    if ((((size(lines) >= 3) .and. lines(((2)+1))) == 'xyz:x:1003:1000:X Yz,Room 1003,(234)555-8913,(234)555-0033,xyz@rosettacode.org:/home/xyz:/bin/bash')) then
      print *, 'append okay'
    else
      print *, 'it didn't work'
    end if
  end function main
end program append_a_record_to_the_end_of_a_text_file
